- make code more robust when using brute force disabling ZenMagick (ie
  removing/renaming the zenmagick folder) without disabling any patches
- fix inaccessible password_forgotten page; #1810390
- make sort option reverse when selcting again (actually, it's a different id
  underneath in the form)
- fix missing shipping options using PHP4; #1813353

Release 0.8.3
- swap meaning of isGuest() and isAnonymous(); the three account/customer
  states are:
  ANONYMOUS: lowest level
	GUEST: email address only; this is the level for checkout without
	registration
	REGISTERED: fully registered user
- update phppdoc to use boolean rather than just bool
- added ZMSacsMapper; similar to ZMUrlMapper, but related to security rather
  than page flow - manages which pages are SSL (and enforces this if
	configured) and validates authorization (anonymous, guest, registered)
- added new setting 'isEnforceSSL'
- remove code from ZMZcoObserver that actually should be in ZMEventFixes...
- implement support for file upload (so far one file only)
- rename 'isAnonymousCheckout' to 'isGuestCheckout'
- more changes to make checkout without registering 'guest checkout'
- fix wrongly preselected checkout address in address list
- implement shipping address POST handling
- add support to validate model objects rather than just maps (arrays); this
  will allow to facilitate model logic (populate) during validation
- move state/zone validation into custom validation rule
- use new ZMStateOrZoneIdRule instead of required rule for state
- fix missing '/' in core compressor (this randomly breaks core.php; #1777420)
- move music extra code into plugin
- fix build to include sample plugin
- implement logoff (not actually executed as zen-cart kicks in first...)
- added new 'isLogoffGuestAfterOrder' setting
- added event based check for shipping/billing addres for guest checkout
- renamed ZMAjaxShoppingCartController::getItemsJSON() to
  ZMAjaxShoppingCartController::getContentsJSON()