@@ -222,8 +222,8 @@ class ZMLoader {
 
         //zm_log($this->name_.": loading: class: " . $name .  ", ZM class: " . $zmname, ZM_LOG_DEBUG);
 
-        if (null != $zmclassfile && !class_exists($zmname)) { require($zmclassfile); }
-        if (null != $classfile && !class_exists($name)) { require($classfile); }
+        if (null != $zmclassfile && !class_exists($zmname)) { require_once($zmclassfile); }
+        if (null != $classfile && !class_exists($name)) { require_once($classfile); }
 
         return null != $classfile ? $name : (null != $zmclassfile ? $zmname : null);
     }
